--- a/sonar.properties
+++ b/sonar.properties
@@ -352,6 +352,7 @@
 # http://lmenezes.com/elasticsearch-kopf/?location=http://localhost:9010
 #sonar.search.httpPort=-1
 
+sonar.security.realm=LDAP
 sonar.log.console=true
 sonar.jdbc.username=${env:SONARQUBE_JDBC_USERNAME}
 sonar.jdbc.password=${env:SONARQUBE_JDBC_PASSWORD}
